# dashboard-avvio-script

./: .gitignore  GEMINI.md  config.json  dashboard.py  data.json  pyproject.toml  requirements.txt  start_dashboard.bat
src/dashboard_app/: __init__.py  config.py  main_window.py  models.py  process.py  storage.py
src/dashboard_app/ui/: dialogs.py  widgets.py
